[package]
name = "echo"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-lc-rs = "1.15.0"
clap = {version = "4.5.51", features = ["derive"]}
clap_derive = "4.5.47"
log = "0.4.28"
mio = {version = "1.1.0", features = ["net", "os-poll"]}
rustls = {version = "0.23.35", features = ["aws-lc-rs", "log"]}
slab = "0.4.11"
rand = "0.9.2"
rustls-pemfile = "2.2.0"
